syntax = "proto2";

package DataModel;

message TimeSpec
{
	required uint64 tv_sec  = 1;
	required uint32 tv_nsec = 2;
}
